<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WoodHouse</string>
    <string name="please_put_phone">请输入手机号</string>
    <string name="please_verification">请输入验证码</string>
    <string name="please_put_newpw">请设置密码（8-16位字符）</string>
    <string name="find_pw">找回密码</string>
    <string name="login_user_register">注册</string>
    <string name="ls_user_register">注册/登录</string>
    <string name="login_forget_pw">忘记密码？</string>
    <string name="please_put_pw">请输入密码</string>
    <string name="bottomtitle_cart">购物车</string>
    <string name="bottomtitle_my">我的</string>
    <string name="bottomtitle_home">首页</string>
    <string name="bottomtitle_dashboard">分类</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="look_around">随便逛逛</string>
    <string name="actual_payment">实付金额：</string>

</resources>