<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context="com.ombre.woodhouse.UI.activity.LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_top_height">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/icon14" />

        <!--login_back_bt：返回按键-->
        <ImageView
            android:id="@+id/login_back_bt"
            android:layout_width="47dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/login_back_bt" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="60dp"
            android:scaleType="fitXY"
            android:src="@drawable/clotheshouse" />

        <TextView
            android:id="@+id/login_user_register"
            android:layout_width="55dp"
            android:layout_height="18dp"
            android:layout_alignBottom="@+id/login_back_bt"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/login_back_bt"
            android:layout_marginBottom="9dp"
            android:layout_marginEnd="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="9dp"
            android:background="@drawable/login_mode_bg"
            android:gravity="center"
            android:text="@string/login_user_register"
            android:textColor="@color/colorWhite"
            android:textSize="15dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edittext_height"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/view_35"
            android:layout_height="@dimen/view_35"
            android:layout_gravity="center|left"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_stay_primary_portrait_black_24dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center|left"
            android:layout_marginLeft="15dp"
            android:src="@drawable/line" />

        <EditText
            android:id="@+id/login_phone_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/login_edittext_bg"
            android:digits="0123456789"
            android:ems="10"
            android:hint="@string/please_put_phone"
            android:inputType="textPersonName"
            android:maxLength="11"
            android:textSize="17sp" />


    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/colorGray"></View>

     <FrameLayout
            android:id="@+id/login_mode_fragment"
            android:name="com.ombre.woodhouse.UI.fragment.Fragment_PWlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </FrameLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/message_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="手机验证码登录"
            android:textSize="15sp"
            android:textColor="@color/colorGray_2"/>

        <TextView
            android:id="@+id/login_forget_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/login_forget_pw"
            android:textSize="15sp"
            android:textColor="@color/colorGray_2"/>
    </LinearLayout>

</LinearLayout>
